--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -269,16 +269,67 @@ div#toolbar_wrapper {
     left: 0;
     right: 0;
     height: 0px;
+    z-index: 40;
 }
 div#toolbar {
     position: relative;
     width: 1000px;
     margin: 0 auto;
     height: 0px;
+    z-index: 45;
 }
 img#mascot {
     position: absolute;
     bottom: 0;
     left: 10px;
     z-index: 5;
+}
+
+/*** SPEECH BUBBLE ***/
+div#speech_bubble {
+    position: absolute;
+    left: 140px;
+    bottom: 105px;
+    z-index: 50;
+    border: 3px solid #000;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    padding: 20px 30px 20px 20px;
+    background-color: #FF8;
+    text-align: center;
+    font: normal 13px arial;
+    -moz-box-shadow: 1px 1px 6px #232;
+    -webkit-box-shadow: 1px 1px 6px #232;
+    box-shadow: 1px 1px 6px #232;
+}
+a#speech_bubble_close {
+    position: absolute;
+    top: 5px;
+    right: 8px;
+    font: bold 20px arial;
+    color: #000;
+}
+div#speech_bubble_tail {
+    position: absolute;
+    left: -13px;
+    bottom: 10px;
+    z-index: 55;
+    border-color: transparent #FF8 transparent transparent;
+    border-style: solid;
+    border-width: 13px 13px 0 0;
+    width: 0px;
+    height: 0px;
+    background-color: transparent;
+}
+div#speech_bubble_tail_border {
+    position: absolute;
+    left: -20px;
+    bottom: 7px;
+    z-index: 50;
+    border-color: transparent #000 transparent transparent;
+    border-style: solid;
+    border-width: 20px 20px 0 0;
+    width: 0px;
+    height: 0px;
+    background-color: transparent;
 }
