--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -7,6 +7,7 @@ html, body {
     height: 100%;
     min-width: 1000px;
     line-height: 1.6em;
+    color: #121;
 }
 img {
     border: 0;
@@ -18,6 +19,7 @@ p {
 h1, h2, h3, h4, h5, h6 {
     margin: 20px 0 10px 0;
     padding: 0;
+    color: #000;
 }
 a {
     color: #800;
@@ -28,6 +30,51 @@ ol, ul {
 }
 li {
     padding: 0 0 5px;
+}
+label {
+    font-weight: bold;
+    padding: 4px 0;
+    display: block;
+}
+input[type=text], select, textarea {
+    border: 1px solid #242;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -moz-box-shadow:    inset 1px 3px 2px #BCA;
+    -webkit-box-shadow: inset 1px 3px 2px #BCA;
+    box-shadow:         inset 1px 3px 2px #BCA;
+    background-color: #EFD;
+    padding: 4px;
+    color: #121;
+    font: normal 12px arial;
+}
+input[type=submit], button {
+    border: 1px solid #121;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -moz-box-shadow:    inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
+    -webkit-box-shadow: inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
+    box-shadow:         inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
+    background-color: #DDD;
+    padding: 4px;
+    font: bold 14px arial;
+    color: #111;
+    text-shadow: 1px 1px 1px #FFF;
+    cursor: pointer;
+}
+input[type=submit]:hover, button:hover {
+    background-color: #EEE;
+    -moz-box-shadow:    inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
+    -webkit-box-shadow: inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
+    box-shadow:         inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
+    color: #333;
+}
+input[type=submit]:active, button:active {
+    background-color: #DDD;
+    -moz-box-shadow:    inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
+    -webkit-box-shadow: inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
+    box-shadow:         inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
+    color: #222;
 }
 
 /*** HEADER ***/
@@ -140,11 +187,11 @@ div#navigation ul li a img {
 /*** CALENDAR ***/
 div#navigation table {
     font: normal 11px arial;
-    margin: 10px auto;
+    margin: 10px 0;
 }
 div#navigation td {
     text-align: right;
-    padding: 0 2px;
+    padding: 0 3px;
 }
 div#navigation td#date_string {
     font-weight: bold;
