Implemented course page.  Started migration file coming from 2010_studymonkey DB.

--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -6,7 +6,6 @@ html, body {
     background: #7EAF65;
     height: 100%;
     min-width: 1000px;
-    line-height: 1.6em;
     color: #121;
 }
 img {
@@ -15,6 +14,7 @@ img {
 p {
     margin: 0 0 10px 0;
     padding: 0;
+    line-height: 1.6em;
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 20px 0 10px 0;
@@ -25,11 +25,20 @@ a {
     color: #800;
     text-decoration: none;
 }
+a:hover {
+    color: #921;
+    text-decoration: underline;
+}
+a:active {
+    color: #000;
+    text-decoration: underline;
+}
 ol, ul {
     padding: 0px 0px 0px 25px;
 }
 li {
     padding: 0 0 5px;
+    line-height: 1.6em;
 }
 label {
     font-weight: bold;
@@ -39,7 +48,7 @@ label {
 input[type=text], select, textarea {
     border: 1px solid #242;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius:      3px;
     -moz-box-shadow:    inset 1px 3px 2px #BCA;
     -webkit-box-shadow: inset 1px 3px 2px #BCA;
     box-shadow:         inset 1px 3px 2px #BCA;
@@ -51,7 +60,7 @@ input[type=text], select, textarea {
 input[type=submit], button {
     border: 1px solid #121;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius:      3px;
     -moz-box-shadow:    inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
     -webkit-box-shadow: inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
     box-shadow:         inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
@@ -76,6 +85,12 @@ input[type=submit]:active, button:active {
     box-shadow:         inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
     color: #222;
 }
+div.left_column {
+    float: left;
+}
+div.right_column {
+    float: right;
+}
 
 /*** HEADER ***/
 div#header {
@@ -88,9 +103,9 @@ div#header {
     background: #357730;
     padding: 0px 0;
     border-bottom: 3px solid #000;
-    -moz-box-shadow: 0px 2px 2px #232;
+    -moz-box-shadow:    0px 2px 2px #232;
     -webkit-box-shadow: 0px 2px 2px #232;
-    box-shadow: 0px 2px 2px #232;
+    box-shadow:         0px 2px 2px #232;
     z-index: 20;
 }
 div#header_content {
@@ -114,10 +129,10 @@ input#header_button {
     right: 0px;
     border: 2px solid #000;
     -moz-border-radius: 6px;
-    border-radius: 6px;
-    -moz-box-shadow: inset 1px 3px 2px #363;
+    border-radius:      6px;
+    -moz-box-shadow:    inset 1px 3px 2px #363;
     -webkit-box-shadow: inset 1px 3px 2px #363;
-    box-shadow: inset 1px 3px 2px #363;
+    box-shadow:         inset 1px 3px 2px #363;
     background-color: #508846;
     height: 14px;
     width: 200px;
@@ -153,15 +168,15 @@ div#navigation ul li a {
     margin-bottom: 3px;
     border: 3px solid #000;
     -moz-border-radius: 8px 0 0 8px;
-    border-radius: 8px 0 0 8px;
+    border-radius:      8px 0 0 8px;
     padding: 4px 4px;
     height: 25px;
     font: bold 14px arial;
     line-height: 25px;
     border-right: 0;
-    -moz-box-shadow: 0px 2px 2px #232;
+    -moz-box-shadow:    0px 2px 2px #232;
     -webkit-box-shadow: 0px 2px 2px #232;
-    box-shadow: 0px 2px 2px #232;
+    box-shadow:         0px 2px 2px #232;
     color: #000;
     text-decoration: none;
 }
@@ -169,9 +184,9 @@ div#navigation ul li a.selected {
     background-color: #FFF;
     right: 0px;
     width: 142px;
-    -moz-box-shadow: 0px 4px 2px -3px #232;
+    -moz-box-shadow:    0px 4px 2px -3px #232;
     -webkit-box-shadow: 0px 4px 2px -3px #232;
-    box-shadow: 0px 4px 2px -3px #232;
+    box-shadow:         0px 4px 2px -3px #232;
     z-index: 40;
 }
 div#navigation ul li a.normal:hover {
@@ -210,7 +225,7 @@ div#navigation td.today {
     background-color: #315232;
     color: #C0D8B8;
     -moz-border-radius: 2px;
-    border-radius: 2px;
+    border-radius:      2px;
 }
 
 /*** CONTENT ***/
@@ -221,18 +236,18 @@ div#content_wrapper {
     border-right: 3px solid #000;
     width: 844px;
     background-color: #FFF;
-    margin: 0 auto -100px;
+    margin: 0 auto -120px;
     height: auto !important;
     height: 100%;
     min-height: 100%;
-    -moz-box-shadow: 1px -5px 6px #232;
+    -moz-box-shadow:    1px -5px 6px #232;
     -webkit-box-shadow: 1px -5px 6px #232;
-    box-shadow: 1px -5px 6px #232;
+    box-shadow:         1px -5px 6px #232;
     z-index: 10;
 }
 div#content_end {
     clear: both;
-    height: 100px;
+    height: 120px;
 }
 div#content {
     position: relative;
@@ -260,7 +275,7 @@ div#content_heading {
 }
 div#page_title {
     color: #232;
-    font: 28px oswald, arial;
+    font: 30px 'Oswald', arial;
 }
 div#page_subtitle {
     font: bold 11px arial;
@@ -278,7 +293,7 @@ div#footer {
     height: 59px;
     border-top: 1px solid #222;
     width: 810px;
-    margin: 20px auto 0;
+    margin: 40px auto 0;
     background: #FFF;
     padding: 10px 0;
     z-index: 15;
@@ -296,11 +311,9 @@ ul#footer_menu li {
 }
 ul#footer_menu a {
     color: #333;
-    text-decoration: none;
 }
 ul#footer_menu a:hover {
     color: #000;
-    text-decoration: underline;
 }
 div#footer_side_rail {
     float: right;
@@ -340,14 +353,14 @@ div#speech_bubble {
     z-index: 50;
     border: 3px solid #000;
     -moz-border-radius: 8px;
-    border-radius: 8px;
+    border-radius:      8px;
     padding: 20px 30px 20px 20px;
     background-color: #FF8;
     text-align: center;
     font: normal 13px arial;
-    -moz-box-shadow: 1px 1px 6px #232;
+    -moz-box-shadow:    1px 1px 6px #232;
     -webkit-box-shadow: 1px 1px 6px #232;
-    box-shadow: 1px 1px 6px #232;
+    box-shadow:         1px 1px 6px #232;
 }
 a#speech_bubble_close {
     position: absolute;
@@ -380,3 +393,37 @@ div#speech_bubble_tail_border {
     height: 0px;
     background-color: transparent;
 }
+
+/*** BUTTONS ***/
+a.button_yellow {
+    display: inline-block;
+    border: 3px solid #000;
+    -moz-border-radius: 24px;
+    border-radius:      24px;
+    padding: 10px 16px;
+    background-color: #F9CF27;
+    font: bold 16px arial;
+    color: #000;
+    -moz-box-shadow:    inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
+    -webkit-box-shadow: inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
+    box-shadow:         inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
+    text-shadow: 1px 1px 1px #FFF, -1px -1px 1px #A83;
+}
+a.button_yellow:hover {
+    background-color: #FD4;
+    text-decoration: none;
+}
+a.button_yellow:active {
+    background-color: #EB2;
+    text-decoration: none;
+}
+/*** RATINGS ***/
+div.transparent, td.transparent, .transparent td {
+    opacity: 0.48;
+    filter: alpha(opacity=48);
+}
+.transparent:hover, .transparent:hover td {
+    opacity: 1.0;
+    filter: alpha(opacity=100);
+}
+
