--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -1,104 +1,14 @@
+/*** TOP LEVEL ***/
 html, body {
-    font-family: arial;
-    font-size: 12px;
     margin: 0;
     padding: 0;
     background: #7EAF65;
     height: 100%;
-    min-width: 1000px;
-    color: #121;
-}
-img {
-    border: 0;
-}
-p {
-    margin: 0 0 10px 0;
-    padding: 0;
-    line-height: 1.6em;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 20px 0 10px 0;
-    padding: 0;
-    color: #000;
-}
-a {
-    color: #800;
-    text-decoration: none;
-}
-a:hover {
-    color: #921;
-    text-decoration: underline;
-}
-a:active {
-    color: #000;
-    text-decoration: underline;
-}
-ol, ul {
-    padding: 0px 0px 0px 25px;
-}
-li {
-    padding: 0 0 5px;
-}
-label {
-    font-weight: bold;
-    padding: 4px 0;
-    display: block;
-}
-input[type=text], select, textarea {
-    border: 1px solid #242;
-    -moz-border-radius: 3px;
-    border-radius:      3px;
-    -moz-box-shadow:    inset 1px 3px 2px #BCA;
-    -webkit-box-shadow: inset 1px 3px 2px #BCA;
-    box-shadow:         inset 1px 3px 2px #BCA;
-    background-color: #EFD;
-    padding: 4px;
-    color: #121;
-    font: normal 12px arial;
-}
-input[type=text].huge {
-    font: italic 24px arial;
-    padding: 6px 12px;
-    height: 34px;
-    color: #787;
-    width: 400px;
-}
-input[type=submit], button {
-    border: 1px solid #121;
-    -moz-border-radius: 3px;
-    border-radius:      3px;
-    -moz-box-shadow:    inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
-    -webkit-box-shadow: inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
-    box-shadow:         inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
-    background-color: #DDD;
-    padding: 4px;
-    font: bold 14px arial;
-    color: #111;
-    text-shadow: 1px 1px 1px #FFF;
-    cursor: pointer;
-}
-input[type=submit].huge, button.huge {
-    font: normal 24px arial;
-    padding: 10px 18px;
-    height: 48px;
-}
-input[type=submit]:hover, button:hover {
-    background-color: #EEE;
-    -moz-box-shadow:    inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
-    -webkit-box-shadow: inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
-    box-shadow:         inset -1px -2px 2px #CCC, inset 1px 2px 2px #FFF;
-    color: #333;
-}
-input[type=submit]:active, button:active {
-    background-color: #DDD;
-    -moz-box-shadow:    inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
-    -webkit-box-shadow: inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
-    box-shadow:         inset -1px -2px 2px #FFF, inset 1px 2px 2px #BBB;
-    color: #222;
+    min-width: 960px;
 }
 div.left_column {
     float: left;
-    width: 585px;
+    width: 545px;
     padding-right: 20px;
     border-right: 1px solid #888;
     -moz-box-shadow:    10px 0px 10px -10px #CCC;
@@ -128,7 +38,7 @@ div#header {
 }
 div#header_content {
     height: 47px;
-    width: 1000px;
+    width: 960px;
     margin: 0 auto;
     position: relative;
     top: 0px;
@@ -259,7 +169,7 @@ div#content_wrapper {
     left: 75px;
     border-left: 3px solid #000;
     border-right: 3px solid #000;
-    width: 844px;
+    width: 804px;
     background-color: #FFF;
     margin: 0 auto -120px;
     height: auto !important;
@@ -269,10 +179,6 @@ div#content_wrapper {
     -webkit-box-shadow: 1px -5px 6px #232;
     box-shadow:         1px -5px 6px #232;
     z-index: 10;
-}
-div#content_end {
-    clear: both;
-    height: 120px;
 }
 div#content {
     position: relative;
@@ -286,7 +192,7 @@ div#content_header {
     margin-top: 50px;
     padding: 15px 17px;
     background-color: #9EC18C;
-    width: 810px;
+    width: 770px;
     height: 75px;
     background-image: url('/image/layout/mascot-silhouette.png');
     background-position: 90% bottom;
@@ -311,8 +217,12 @@ div#page_subtitle2 {
     color: #242;
 }
 div#content_body {
-    width: 810px;
+    width: 770px;
     padding: 15px 17px;
+}
+div#content_end {
+    clear: both;
+    height: 120px;
 }
 
 /*** FOOTER ***/
@@ -322,7 +232,7 @@ div#footer {
     clear: both;
     height: 59px;
     border-top: 1px solid #222;
-    width: 810px;
+    width: 770px;
     margin: 40px auto 0;
     background: #FFF;
     padding: 10px 0;
@@ -350,144 +260,4 @@ div#footer_side_rail {
     font: normal 11px arial;
     text-align: right;
     color: #888;
-}
-
-/*** MASCOT ***/
-div#toolbar_wrapper {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 0px;
-    z-index: 40;
-}
-div#toolbar {
-    position: relative;
-    width: 1000px;
-    margin: 0 auto;
-    height: 0px;
-    z-index: 45;
-}
-img#mascot {
-    position: absolute;
-    bottom: 0;
-    left: 10px;
-    z-index: 5;
-}
-
-/*** SPEECH BUBBLE ***/
-div#speech_bubble {
-    position: absolute;
-    left: 140px;
-    bottom: 105px;
-    z-index: 50;
-    border: 3px solid #000;
-    -moz-border-radius: 8px;
-    border-radius:      8px;
-    padding: 20px 30px 20px 20px;
-    background-color: #FF8;
-    text-align: center;
-    font: normal 13px arial;
-    -moz-box-shadow:    1px 1px 6px #232;
-    -webkit-box-shadow: 1px 1px 6px #232;
-    box-shadow:         1px 1px 6px #232;
-}
-a#speech_bubble_close {
-    position: absolute;
-    top: 5px;
-    right: 8px;
-    font: bold 20px arial;
-    color: #000;
-}
-div#speech_bubble_tail {
-    position: absolute;
-    left: -13px;
-    bottom: 10px;
-    z-index: 55;
-    border-color: transparent #FF8 transparent transparent;
-    border-style: solid;
-    border-width: 13px 13px 0 0;
-    width: 0px;
-    height: 0px;
-    background-color: transparent;
-}
-div#speech_bubble_tail_border {
-    position: absolute;
-    left: -20px;
-    bottom: 7px;
-    z-index: 50;
-    border-color: transparent #000 transparent transparent;
-    border-style: solid;
-    border-width: 20px 20px 0 0;
-    width: 0px;
-    height: 0px;
-    background-color: transparent;
-}
-
-/*** BUTTONS ***/
-.button {
-    display: inline-block;
-    border: 3px solid #000;
-    -moz-border-radius: 24px;
-    border-radius:      24px;
-    padding: 10px 16px;
-    font: bold 16px arial;
-    color: #000;
-    cursor: pointer;
-}
-.button.small {
-    border: 2px solid #000;
-    padding: 5px 10px;
-    font: bold 12px arial;
-}
-.button.inline {
-    border: 2px solid #000;
-    -moz-border-radius: 4px;
-    border-radius:      4px;
-    padding: 3px 8px;
-    font: bold 12px arial;
-}
-.button:hover, .button:active {
-    color: #000;
-    text-decoration: none;
-}
-.button.yellow {
-    background-color: #F9CF27;
-    -moz-box-shadow:    inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
-    -webkit-box-shadow: inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
-    box-shadow:         inset 1px 1px 6px #FFF, inset -1px -1px 5px #830;
-    text-shadow: 1px 1px 1px #FFF, -1px -1px 1px #A83;
-}
-.button.yellow:hover { background-color: #FD4; }
-.button.yellow:active { background-color: #EB2; }
-.button.green {
-    background-color: #7EAF65;
-    -moz-box-shadow:    inset 1px 1px 6px #CDC, inset -1px -1px 5px #030;
-    -webkit-box-shadow: inset 1px 1px 6px #CDC, inset -1px -1px 5px #030;
-    box-shadow:         inset 1px 1px 6px #CDC, inset -1px -1px 5px #030;
-    text-shadow: 1px 1px 1px #CDC, -1px -1px 1px #080;
-}
-.button.green:hover { background-color: #8B7; }
-.button.green:active { background-color: #695; }
-
-/*** RATINGS ***/
-div.transparent, td.transparent, .transparent td {
-    opacity: 0.48;
-    filter: alpha(opacity=48);
-}
-.transparent:hover, .transparent:hover td {
-    opacity: 1.0;
-    filter: alpha(opacity=100);
-}
-
-/*** PAGINATION ***/
-.pagination {
-    font-size: 14px;
-}
-.pagination.current {
-    color: #000;
-    font-weight: bold;
-}
-.pagination.off {
-    color: #777;
 }
