--- a/root/css/element_styles.css
+++ b/root/css/element_styles.css
@@ -17,6 +17,11 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     color: #000;
 }
+h1 { font: 30px 'Oswald', arial; }
+h2 { font: bold 18px arial; }
+h3 { font: bold 14px arial; }
+h4 { font: bold 12px arial; }
+
 ol, ul {
     padding: 0px 0px 0px 25px;
 }
@@ -83,6 +88,11 @@ input[type=submit]:active, button:active {
     color: #000;
     cursor: pointer;
 }
+.button.medium {
+    border: 2px solid #000;
+    padding: 8px 12px;
+    font: bold 14px arial;
+}
 .button.small {
     border: 2px solid #000;
     padding: 5px 10px;
@@ -119,6 +129,14 @@ input[type=submit]:active, button:active {
 .button.green:active { background-color: #695; }
 
 /*** FORMS ***/
+form[name=letter_search] {
+    display: inline-block;
+}
+form[name=letter_search] input[type=submit] {
+    padding: 0px;
+    font-size: 12px;
+}
+
 label {
     font-weight: bold;
     padding: 4px 0;
@@ -137,11 +155,14 @@ input[type=text], select, textarea {
     font: normal 12px arial;
 }
 input[type=text].huge {
-    font: italic 24px arial;
+    font-size: 24px;
     padding: 6px 12px;
     height: 34px;
-    color: #787;
     width: 400px;
+}
+input[type=text].placeholder {
+    font-style: italic;
+    color: #787;
 }
 
 /*** TRIANGLES ***/
@@ -205,14 +226,19 @@ img#mascot {
 }
 
 /*** SPEECH BUBBLE ***/
+.round_box {
+    border: 1px solid #888;
+    -moz-border-radius: 8px;
+    border-radius:      8px;
+    padding: 5px;
+    background-color: #F3F3F3;
+}
 div#speech_bubble {
     position: absolute;
     left: 140px;
     bottom: 105px;
     z-index: 50;
     border: 3px solid #000;
-    -moz-border-radius: 8px;
-    border-radius:      8px;
     padding: 20px 30px 20px 20px;
     background-color: #FF8;
     text-align: center;
@@ -227,6 +253,7 @@ a#speech_bubble_close {
     right: 8px;
     font: bold 20px arial;
     color: #000;
+    text-decoration: none;
 }
 div#speech_bubble_tail {
     position: absolute;
