--- a/root/css/element_styles.css
+++ b/root/css/element_styles.css
@@ -52,7 +52,7 @@ input[type=submit], button {
     -webkit-box-shadow: inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
     box-shadow:         inset -1px -2px 2px #BBB, inset 1px 2px 2px #FFF;
     background-color: #DDD;
-    padding: 4px;
+    padding: 4px 10px;
     font: bold 14px arial;
     color: #111;
     text-shadow: 1px 1px 1px #FFF;
@@ -146,7 +146,7 @@ input[type=checkbox] {
 }
 label {
     font: bold 12px arial;
-    padding: 4px 0;
+    padding: 0 5px;
     display: inline-block;
 }
 input[type=text], select, textarea {
